# Agentic-RAG

./: Basic_Chain.py  Basic_RAG.py  README.md  Structural_Output.py  basic.py  basicRAG_PDF.py  basicRag_Doc.py  iterative_workflow_langgraph.ipynb  persistance_in_langgraph.ipynb  pyproject.toml
